--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-</head>
-<body>
-  <h1>Welcome to my Portfolio</h1>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portfolio</title>
+  </head>
+  <body>
+    <!-- Section: Intro -->
+    <header>
+      <h1>Sihab Sarar Chistee</h1>
+      <p>Web Developer and Student of Computer Science</p>
+    </header>
+    <hr/>
+    <!-- Section: about me -->
+
+    <!-- Section: Skills -->
+
+    <!-- Section: Contacts -->
+  </body>
 </html>
