--- a/index.html
+++ b/index.html
@@ -5,17 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
   </head>
+
   <body>
+    <!-- section: navbar -->
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
     <!-- Section: Intro -->
-    <header>
+    <header id="intro">
       <h1>Sihab Sarar Chistee</h1>
       <p>Web Developer and Student of Computer Science</p>
     </header>
-    <hr/>
+    <hr />
+    <!-- normal text <br/>
+    <u>Underlined text</u> <br/>
+    <strong>Bold text</strong> <br/>
+    <em>Italic text</em> <br/>
+    <mark>Mark text</mark><br/>
+    <del>Deleted text</del><br/>
+    (a+b)<sup>2</sup> H<sub>2</sub>O  -->
     <!-- Section: about me -->
-
+    <section id="about">
+      <h2></h2>
+      <p><strong>Experience:</strong> 5 years experience in web development</p>
+      <p>
+        <strong>Education:</strong> Bachelor in computer science and engineering
+        from DIU
+      </p>
+    </section>
     <!-- Section: Skills -->
-
+    <section id="skills">
+      <h2>Skills</h2>
+      <ol type="circle">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <ul>
+          <li>React.js</li>
+          <li>Angular.js</li>
+          <li>Node.js</li>
+          <li>Express.js</li>
+        </ul>
+        <li>MongoDB</li>
+        <li>Typescript</li>
+      </ol>
+      <!-- <dl>
+        <dt>HTML</dt>
+        <dd>
+          HTML is a markup language. HTML stands for HYPER TEXT MARKUP LANGUAGE
+        </dd>
+      </dl> -->
+    </section>
+    <!-- Section: Projects -->
+    <section id="Projects">
+      <h2>Projects</h2>
+      <ol>
+        <li>
+          <a href="https://github.com/Sihab-10/portfolio-html" target="_blank"
+            >My Portfolio Website</a
+          >
+        </li>
+        <li>Blog Website</li>
+        <li>E-commerce Website</li>
+      </ol>
+    </section>
     <!-- Section: Contacts -->
+    <section id="contact">
+      <h2>Contact Me</h2>
+    </section>
+    <!-- section: footer -->
+    <footer>
+      <p>Copyright &copy; reserved by SihabSararChistee2024</p>
+      <a href="tel:01706841331">Call me</a>
+      <a href="mailto:sihabsarar10@gmail.com">Email Me</a>
+    </footer>
   </body>
 </html>
