--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- Section: Intro -->
     <header id="intro">
       <h1>Sihab Sarar Chistee</h1>
-      <p>Web Developer and Student of Computer Science</p>
+      <p><em>Web Developer and Student of Computer Science</em></p>
+      <img src="./images/sihab_photo.jpg" alt="Sihab_Sarar" width="300" height="300">
     </header>
     <hr />
     <!-- normal text <br/>
