image added with youtube link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header id="intro">
       <h1>Sihab Sarar Chistee</h1>
       <p><em>Web Developer and Student of Computer Science</em></p>
-      <img src="./images/sihab_photo.jpg" alt="Sihab_Sarar" width="300" height="300">
+      <a href="https://www.youtube.com/@digithunder24"><img src="./images/sihab_photo.jpg" alt="Sihab_Sarar" width="300" height="300"></a>
     </header>
     <hr />
     <!-- normal text <br/>
