--- a/index.html
+++ b/index.html
@@ -39,22 +39,33 @@
         from DIU
       </p>
     </section>
+    <br>
     <!-- Section: Skills -->
+     <h2>Skills</h2>
     <section id="skills">
-      <h2>Skills</h2>
-      <ol type="circle">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <ul>
-          <li>React.js</li>
-          <li>Angular.js</li>
-          <li>Node.js</li>
-          <li>Express.js</li>
-        </ul>
-        <li>MongoDB</li>
-        <li>Typescript</li>
-      </ol>
+      <table border="1" cellpadding="10" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Technology</th>
+            <th>Proficiency</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>HTML</td>
+            <td>Intermediate</td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td>Intermediate</td>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
+            <td>Intermediate</td>
+          </tr>
+        </tbody>
+        <tfoot></tfoot>
+      </table>
       <!-- <dl>
         <dt>HTML</dt>
         <dd>
