--- a/index.html
+++ b/index.html
@@ -4,114 +4,180 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="author" content="Sihab Sarar Chistee">
+  <meta name="keywords" content="portfolio, html, sihab sarar">
+  <meta name="description" content="Sihab Sarar Chistee is a software developer...">
   <title>My Portfolio</title>
+  <!-- font awesome cdn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- google font link -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
 </head>
+<style>
+  body {
+    background-color: rgb(209, 209, 209);
+    font-family: "Roboto", sans-serif;
+  }
+</style>
 
 <body>
   <!-- section: navbar -->
-  <nav>
-    <ul>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#Projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  <!-- Section: Intro -->
-  <header id="intro">
-    <h1>Sihab Sarar Chistee</h1>
-    <p><em>Web Developer and Student of Computer Science</em></p>
-    <a href="https://www.youtube.com/@digithunder24"><img src="./images/sihab_photo.jpg" alt="Sihab_Sarar" width="300"
-        height="300"></a>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-  <hr />
-  <!-- normal text <br/>
+  <main>
+    <!-- Section: Intro -->
+    <section id="intro">
+      <h1>Sihab Sarar Chistee</h1>
+      <p><em>Web Developer and Student of Computer Science</em></p>
+      <a href="https://www.youtube.com/@digithunder24"><img src="./images/sihab_photo.jpg" alt="Sihab_Sarar" width="300"
+          height="300"></a>
+    </section>
+    <hr />
+    <!-- normal text <br/>
     <u>Underlined text</u> <br/>
     <strong>Bold text</strong> <br/>
     <em>Italic text</em> <br/>
     <mark>Mark text</mark><br/>
     <del>Deleted text</del><br/>
     (a+b)<sup>2</sup> H<sub>2</sub>O  -->
-  <!-- Section: about me -->
-  <section id="about">
-    <h2></h2>
-    <p><strong>Experience:</strong> 5 years experience in web development</p>
-    <p>
-      <strong>Education:</strong> Bachelor in computer science and engineering
-      from DIU
-    </p>
-  </section>
-  <br>
-  <!-- Section: Skills -->
-  <h2>Skills</h2>
-  <section id="skills">
-    <table border="1" cellpadding="10" cellspacing="0">
-      <thead>
-        <tr>
-          <th>Technology</th>
-          <th>Proficiency</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>HTML</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-          <td>Intermediate</td>
-        </tr>
-      </tbody>
-      <tfoot></tfoot>
-    </table>
-    <!-- <dl>
+    <!-- Section: about me -->
+    <section id="about">
+      <h2></h2>
+      <p><strong>Experience:</strong> 5 years experience in web development</p>
+      <p>
+        <strong>Education:</strong> Bachelor in computer science and engineering
+        from DIU
+      </p>
+    </section>
+    <br>
+    <!-- Section: Skills -->
+    <h2>Skills</h2>
+    <section id="skills">
+      <table border="1" cellpadding="10" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Technology</th>
+            <th>Proficiency</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>HTML</td>
+            <td rowspan="2">Intermediate</td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
+            <td>Intermediate</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="2">All right reserved 2024</td>
+          </tr>
+        </tfoot>
+      </table>
+      <!-- <dl>
         <dt>HTML</dt>
         <dd>
           HTML is a markup language. HTML stands for HYPER TEXT MARKUP LANGUAGE
         </dd>
       </dl> -->
-  </section>
-  <!-- Section: Projects -->
-  <section id="Projects">
-    <h2>Projects</h2>
-    <ol>
-      <li>
-        <a href="https://github.com/Sihab-10/portfolio-html" target="_blank">My Portfolio Website</a>
-      </li>
-      <li>Blog Website</li>
-      <li>E-commerce Website</li>
-    </ol>
-  </section>
-  <!-- Section: Contacts -->
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <form action="">
-      <div>
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name" required>
-      </div>
-      <div>
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" required>
-      </div>
-      <div>
-        <label for="message">Message:</label>
-        <textarea name="message" id="message">type your comment here...</textarea>
-        <button type="submit">Submit</button>
-        <button type="reset">Clear</button>
-      </div>
-    </form>
-  </section>
-  <!-- section: footer -->
+    </section>
+    <!-- Section: Projects -->
+    <section id="Projects">
+      <h2>Projects</h2>
+      <ol>
+        <li>
+          <a href="https://github.com/Sihab-10/portfolio-html" target="_blank">My Portfolio Website</a>
+        </li>
+        <li>Blog Website</li>
+        <li>E-commerce Website</li>
+      </ol>
+    </section>
+    <!-- Section: Contacts -->
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <form action="https://formspree.io/f/mblrjgaj"
+      method="POST">
+        <div>
+          <label for="name">Name:</label>
+          <input type="text" name="name" id="name" required>
+        </div>
+        <div>
+          <label for="email">Email:</label>
+          <input type="email" name="email" id="email" required>
+        </div>
+        <div>
+          <label for="age">Age:</label>
+          <input type="number" name="age" id="age" min="18" max="65" required>
+        </div>
+        <div>
+          <label for="Website">Website:</label>
+          <input type="url" name="Website" id="website" pattern="https?://.+">
+        </div>
+        <!-- <div>
+          <label for="image">Upload an image:</label>
+          <input type="file" name="image" id="image" accept="image/*">
+        </div> -->
+        <!-- <div>
+          <label for="subject">Select Your Subject</label>
+          <select name="subject" id="subject">
+            <option value="CSE">CSE</option>
+            <option value="EEE">EEE</option>
+            <option value="Inquiry">Inquiry</option>
+          </select>
+        </div> -->
+        <div>
+          <label for="message">Message:</label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          <button type="submit">Submit</button>
+          <button type="reset">Clear</button>
+        </div>
+      </form>
+    </section>
+    <!-- section: footer -->
+  </main>
   <footer>
     <p> &spades; Copyright &copy; reserved by SihabSararChistee2024 &spades;</p>
     <p> Development with &hearts; </p>
     <a href="tel:01706841331">Call me</a>
     <a href="mailto:sihabsarar10@gmail.com">Email Me</a>
+    <h3>Follow Me</h3>
+    <ul>
+      <li>
+        <a href="https://www.facebook.com/digithunder24" target="_blank">
+          <i class="fa-brands fa-facebook"></i> Visit my facebook page
+        </a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/@digithunder24" target="_blank">
+          <i class="fa-brands fa-youtube"></i> Visit my Youtube Channel
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/sihabsararchistee/" target="_blank">
+          <i class="fa-brands fa-linkedin"></i> Visit my linkedin Profile
+        </a>
+      </li>
+    </ul>
   </footer>
 </body>
 
